// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WHEN airtable export WHEN create new notes AND WHEN export notes with multiple singleTag THEN success 1`] = `
Object {
  "created": Array [
    Object {
      "fields": Object {
        "DendronId": "foo.lvl-1",
        "Level": "lvl1",
        "Source": "source.one",
      },
      "id": "airtable-foo.lvl-1",
    },
    Object {
      "fields": Object {
        "DendronId": "foo.lvl-2",
        "Level": "lvl2",
        "Source": "source.two",
      },
      "id": "airtable-foo.lvl-2",
    },
    Object {
      "fields": Object {
        "DendronId": "foo.no-level",
        "Source": "source.three",
      },
      "id": "airtable-foo.no-level",
    },
  ],
  "updated": Array [],
}
`;

exports[`WHEN airtable export WHEN create new notes AND WHEN export notes with one singleTag THEN success 1`] = `
Object {
  "created": Array [
    Object {
      "fields": Object {
        "DendronId": "foo.lvl-1",
        "Level": "lvl1",
      },
      "id": "airtable-foo.lvl-1",
    },
    Object {
      "fields": Object {
        "DendronId": "foo.lvl-2",
        "Level": "lvl2",
      },
      "id": "airtable-foo.lvl-2",
    },
    Object {
      "fields": Object {
        "DendronId": "foo.no-level",
      },
      "id": "airtable-foo.no-level",
    },
  ],
  "updated": Array [],
}
`;

exports[`WHEN airtable export WHEN update notes AND WHEN export notes with multiple singleTag THEN success 1`] = `
Object {
  "created": Array [],
  "updated": Array [
    Object {
      "fields": Object {
        "DendronId": "foo.lvl-1",
        "Level": "lvl1",
        "Source": "source.one",
      },
      "id": "airtable-foo.lvl-1",
    },
    Object {
      "fields": Object {
        "DendronId": "foo.lvl-2",
        "Level": "lvl2",
        "Source": "source.two",
      },
      "id": "airtable-foo.lvl-2",
    },
    Object {
      "fields": Object {
        "DendronId": "foo.no-level",
        "Source": "source.three",
      },
      "id": "airtable-foo.no-level",
    },
  ],
}
`;

exports[`WHEN airtable export WHEN update notes AND WHEN export notes with one singleTag THEN success 1`] = `
Object {
  "created": Array [],
  "updated": Array [
    Object {
      "fields": Object {
        "DendronId": "foo.lvl-1",
        "Level": "lvl1",
      },
      "id": "airtable-foo.lvl-1",
    },
    Object {
      "fields": Object {
        "DendronId": "foo.lvl-2",
        "Level": "lvl2",
      },
      "id": "airtable-foo.lvl-2",
    },
    Object {
      "fields": Object {
        "DendronId": "foo.no-level",
      },
      "id": "airtable-foo.no-level",
    },
  ],
}
`;
